feat: 支持一次性检查所有 Tracker
